Consistency with lines that creates DF columns

--- a/presidents-of-chile/presidents-of-chile_tenures.ipynb
+++ b/presidents-of-chile/presidents-of-chile_tenures.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +818,7 @@
     "                                                'date_of_birth', 'date_of_death', 'is_resigned', 'is_deposed']]\n",
     "\n",
     "# create column is_died_in_office - if the end of their tenure is the same as their date of death, then they died in office\n",
-    "incomplete_tenures.loc[:, 'is_died_in_office'] = incomplete_tenures['date_tenure_end'].eq(incomplete_tenures['date_of_death'])\n",
+    "incomplete_tenures['is_died_in_office'[:]] = incomplete_tenures['date_tenure_end'].eq(incomplete_tenures['date_of_death'])\n",
     "\n",
     "for index, value in incomplete_tenures['is_died_in_office'].items():\n",
     "    if value == True:\n",
@@ -827,7 +827,7 @@
     "        incomplete_tenures.at[index, 'is_died_in_office'] = 0\n",
     "\n",
     "# create column age_left_office\n",
-    "incomplete_tenures.loc[:, 'age_left_office'] = abs(incomplete_tenures['date_tenure_end'] - incomplete_tenures['date_of_birth'])\n",
+    "incomplete_tenures['age_left_office'[:]] = abs(incomplete_tenures['date_tenure_end'] - incomplete_tenures['date_of_birth'])\n",
     "\n",
     "for index, value in incomplete_tenures['age_left_office'].items():\n",
     "    value.to_pytimedelta()\n",
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +939,7 @@
     "incomplete_tenures = incomplete_tenures.merge(deaths, on='person_id')\n",
     "\n",
     "# create cause_of_death column\n",
-    "incomplete_tenures.loc[:, 'cause_of_death'] = ''\n",
+    "incomplete_tenures['cause_of_death'[:]] = ''\n",
     "\n",
     "for index, value in incomplete_tenures.iterrows():\n",
     "    if value['is_unknown'] == 1:\n",
